--- a/ros2_ws/src/ugv_else/apriltag_ros/apriltag_msgs/package.xml
+++ b/ros2_ws/src/ugv_else/apriltag_ros/apriltag_msgs/package.xml
@@ -2,20 +2,18 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>apriltag_msgs</name>
-  <version>0.0.0</version>
-  <description>AprilTag messages</description>
-  <maintainer email="rachelyoung0407@gmail.com">iven</maintainer>
-  <license>bsd_2clause</license>
-
-  <build_depend>rosidl_default_generators</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <version>2.0.1</version>
+  <description>AprilTag message definitions</description>
+  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
+  <build_depend>std_msgs</build_depend>
+
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
