--- a/ros2_ws/src/iot_controller/iot_certs_and_config/iot_config.json
+++ b/ros2_ws/src/iot_controller/iot_certs_and_config/iot_config.json
@@ -4,7 +4,7 @@
     "certificatePath" : "/home/joshua/rover1/certificate.pem.crt",
     "privateKeyPath" : "/home/joshua/rover1/private.pem.key",
     "port" : 443,
-    "clientID" : "python-my-rover-1",
+    "clientID" : "python-my-rover-",
     "region": "ap-south-1",
     "retryWaitTime": 5,
     "retryAttempts": 10
