--- a/ros2_ws/requirements.txt
+++ b/ros2_ws/requirements.txt
@@ -11,7 +11,7 @@ python-dotenv==1.0.*
 websockets==13.0.1
 # for GStreamer
 pycairo==1.27.0
-PyGObject==3.50.0
+# PyGObject==3.50.0
 # for openvino compatibility
 numpy==1.26.4
 # for Viewer
