--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,16 +27,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
-    "@reduxjs/toolkit": "^2.2.8",
     "amazon-kinesis-video-streams-webrtc": "^2.3.1",
     "aws-iot-device-sdk-v2": "^1.21.1",
     "aws-sdk": "^2.1692.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
-    "react-joystick-component": "^6.2.1",
     "react-player": "^2.16.0",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "uuid": "^11.0.3"
   },
@@ -52,6 +49,7 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
+    "rc-joystick": "^1.0.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
     "vite": "^5.4.8"
