--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
+    "react-joystick-component": "^6.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "uuid": "^11.0.3"
@@ -49,7 +50,6 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
-    "rc-joystick": "^1.0.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
     "vite": "^5.4.8"
